--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
     </header>
          <nav>
-           <a href="a">Home</a>
-           <a href="a">Noticias</a>
-           <a href="a">Curiosidades</a>
-           <a href="a">Fale Conosco</a>
+           <a href="">Home</a>
+           <a href="">Noticias</a>
+           <a href="">Contato</a>
+           
          </nav>
 
     <main>
