--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </main>
 
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> Para o <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank">curso em video</a>.</p>
+        <p><a href="https://github.com/Gariel4562" target="_blank">&copy;Biel 2021</a></p>
 
     </footer>
 
