--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </main>
 
     <footer>
-        <p><a href="https://github.com/Gariel4562" target="_blank">&copy;Biel 2021</a></p>
+        <p>Site criado por <a href="https://github.com/gustavoguanabara" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/watch?v=vPNIAJ9B4hg&list=PLHz_AreHm4dlUpEXkY1AyVLQGcpSgVF8s" target="_blank" class="externo">CursoemVideo</a></p>
 
     </footer>
 
